fix a server connect issue

--- a/urban-spork-server/pom.xml
+++ b/urban-spork-server/pom.xml
@@ -15,6 +15,14 @@
   </dependencies>
   <build>
     <finalName>${project.name}</finalName>
+    <resources>
+      <resource>
+        <directory>resource</directory>
+        <includes>
+          <include>**/*.xml</include>
+        </includes>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
