--- a/urban-spork-client/pom.xml
+++ b/urban-spork-client/pom.xml
@@ -28,6 +28,13 @@
           <include>**/*.xml</include>
         </includes>
       </resource>
+      <resource>
+        <directory>resource</directory>
+        <targetPath>resource</targetPath>
+        <excludes>
+          <exclude>**/*.xml</exclude>
+        </excludes>
+      </resource>
     </resources>
     <plugins>
       <plugin>
