--- a/urban-spork-client/pom.xml
+++ b/urban-spork-client/pom.xml
@@ -6,22 +6,30 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>urban-spork-client</artifactId>
+  <version>${urban-spork.version}</version>
   <dependencies>
     <dependency>
       <groupId>urban-spork</groupId>
       <artifactId>urban-spork-common</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
     </dependency>
     <dependency>
       <groupId>com.jfoenix</groupId>
       <artifactId>jfoenix</artifactId>
-      <version>8.0.8</version>
     </dependency>
   </dependencies>
-
   <build>
     <finalName>${project.name}</finalName>
     <resources>
+      <resource>
+        <directory>src</directory>
+        <includes>
+          <include>**/*.properties</include>
+        </includes>
+      </resource>
       <resource>
         <directory>resource</directory>
         <includes>
@@ -71,5 +79,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
