--- a/urban-spork-common/pom.xml
+++ b/urban-spork-common/pom.xml
@@ -6,20 +6,15 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>urban-spork-common</artifactId>
-  <name>urban-spork-common</name>
-
+  <version>${urban-spork.version}</version>
   <dependencies>
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
-      <version>${netty.version}</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk15on</artifactId>
-      <version>${bouncycastle.version}</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.alibaba</groupId>
@@ -37,7 +32,6 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
     </dependency>
-
   </dependencies>
   <build>
     <testSourceDirectory>test</testSourceDirectory>
