remove third part font

--- a/pom.xml
+++ b/pom.xml
@@ -64,13 +64,14 @@
       </dependency>
       <dependency>
         <groupId>org.openjfx</groupId>
-        <artifactId>javafx-fxml</artifactId>
-        <version>11</version>
+        <artifactId>javafx-controls</artifactId>
+        <version>13</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
     <sourceDirectory>src</sourceDirectory>
+    <testSourceDirectory>test</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
