--- a/urban-spork-client/pom.xml
+++ b/urban-spork-client/pom.xml
@@ -13,7 +13,7 @@
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
-      <artifactId>javafx-fxml</artifactId>
+      <artifactId>javafx-controls</artifactId>
     </dependency>
     <dependency>
       <groupId>com.jfoenix</groupId>
@@ -75,6 +75,16 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.3</version>
+        <configuration>
+          <jlinkImageName>urbanspork</jlinkImageName>
+          <launcher>launcher</launcher>
+          <mainClass>com.urbanspork.client.mvc.Main</mainClass>
+        </configuration>
       </plugin>
     </plugins>
   </build>
