--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <junit.jupiter.version>5.5.2</junit.jupiter.version>
     <fastjson.version>1.2.62</fastjson.version>
     <jackson.version>2.10.1</jackson.version>
-    <logback.version>1.3.0-alpha5</logback.version>
+    <logback.version>1.2.3</logback.version>
     <netty.version>4.1.44.Final</netty.version>
     <bouncycastle.version>1.63</bouncycastle.version>
     <jfoenix.version>9.0.8</jfoenix.version>
@@ -56,7 +56,7 @@
       </dependency>
       <dependency>
         <groupId>io.netty</groupId>
-        <artifactId>netty-all</artifactId>
+        <artifactId>netty-codec-socks</artifactId>
         <version>${netty.version}</version>
       </dependency>
       <dependency>
