--- a/urban-spork-common/pom.xml
+++ b/urban-spork-common/pom.xml
@@ -9,7 +9,7 @@
   <dependencies>
     <dependency>
       <groupId>io.netty</groupId>
-      <artifactId>netty-all</artifactId>
+      <artifactId>netty-codec-socks</artifactId>
     </dependency>
     <dependency>
       <groupId>org.bouncycastle</groupId>
