--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <urban-spork.version>1.0.0-SNAPSHOT</urban-spork.version>
     <junit.jupiter.version>5.5.2</junit.jupiter.version>
-    <fastjson.version>1.2.62</fastjson.version>
     <jackson.version>2.12.2</jackson.version>
     <logback.version>1.2.3</logback.version>
-    <netty.version>4.1.56.Final</netty.version>
+    <netty.version>4.1.74.Final</netty.version>
     <bouncycastle.version>1.68</bouncycastle.version>
     <jfoenix.version>9.0.10</jfoenix.version>
   </properties>
@@ -56,6 +55,11 @@
       </dependency>
       <dependency>
         <groupId>io.netty</groupId>
+        <artifactId>netty-handler</artifactId>
+        <version>${netty.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
         <artifactId>netty-codec-socks</artifactId>
         <version>${netty.version}</version>
       </dependency>
@@ -72,7 +76,7 @@
       <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-controls</artifactId>
-        <version>15</version>
+        <version>17.0.2</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -84,16 +88,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
         <configuration>
-          <source>15</source>
-          <target>15</target>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M3</version>
       </plugin>
     </plugins>
   </build>
