--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <logback.version>1.2.3</logback.version>
     <netty.version>4.1.74.Final</netty.version>
     <bouncycastle.version>1.68</bouncycastle.version>
+    <javafx.version>18.0.2</javafx.version>
     <jfoenix.version>9.0.10</jfoenix.version>
   </properties>
   <dependencyManagement>
@@ -76,7 +77,7 @@
       <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-controls</artifactId>
-        <version>17.0.2</version>
+        <version>${javafx.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
