--- a/urban-spork-common/pom.xml
+++ b/urban-spork-common/pom.xml
@@ -13,6 +13,10 @@
       <artifactId>netty-codec-socks</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-handler</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk15on</artifactId>
     </dependency>
