--- a/urban-spork-client-gui/pom.xml
+++ b/urban-spork-client-gui/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>urban-spork</groupId>
     <artifactId>urban-spork</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.1.0</version>
   </parent>
   <groupId>urban-spork-client-gui</groupId>
   <artifactId>urban-spork-client-gui</artifactId>
@@ -26,7 +26,7 @@
       <resource>
         <directory>src</directory>
         <includes>
-          <include>**/*.properties</include>
+          <include>**/*.properties</include><!-- i18n -->
         </includes>
       </resource>
       <resource>
@@ -47,7 +47,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>${maven-jar-plugin.version}</version>
         <configuration>
           <archive>
             <addMavenDescriptor>false</addMavenDescriptor>
