--- a/urban-spork-client/pom.xml
+++ b/urban-spork-client/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>urban-spork</groupId>
     <artifactId>urban-spork</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.1.0</version>
   </parent>
   <artifactId>urban-spork-client</artifactId>
   <dependencies>
