--- a/urban-spork-common/pom.xml
+++ b/urban-spork-common/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>urban-spork</groupId>
     <artifactId>urban-spork</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.1.0</version>
   </parent>
   <artifactId>urban-spork-common</artifactId>
   <dependencies>
@@ -18,7 +18,7 @@
     </dependency>
     <dependency>
       <groupId>org.bouncycastle</groupId>
-      <artifactId>bcprov-jdk15on</artifactId>
+      <artifactId>bcprov-jdk18on</artifactId>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
