--- a/urban-spork-server/pom.xml
+++ b/urban-spork-server/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>urban-spork</groupId>
     <artifactId>urban-spork</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.1.0</version>
   </parent>
   <artifactId>urban-spork-server</artifactId>
   <dependencies>
@@ -25,7 +25,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>${maven-jar-plugin.version}</version>
         <configuration>
           <archive>
             <addMavenDescriptor>false</addMavenDescriptor>
