--- a/urban-spork-common/pom.xml
+++ b/urban-spork-common/pom.xml
@@ -39,5 +39,14 @@
   </dependencies>
   <build>
     <finalName>${project.artifactId}-${project.version}</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <excludedGroups>dependent</excludedGroups>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
