--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,16 +1,22 @@
 name: coverage
-
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Coverage
     steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B test --file pom.xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
