Support padding for aead payload codec

--- a/urban-spork-test/pom.xml
+++ b/urban-spork-test/pom.xml
@@ -43,6 +43,14 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin}</version>
+        <configuration>
+          <excludedGroups>dependent</excludedGroups>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
