--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,7 +1,7 @@
 name: coverage
 on:
   push:
-    branches: [ master ]
+    branches: [ master, coverage ]
   pull_request:
     branches: [ master ]
 jobs:
