--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,10 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <urban-spork.version>2.3.0</urban-spork.version>
-    <maven-surefire-plugin>3.0.0</maven-surefire-plugin>
+    <maven-surefire-plugin.versioin>3.0.0</maven-surefire-plugin.versioin>
     <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
-    <maven-compiler-plugin>3.11.0</maven-compiler-plugin>
-    <jacoco-maven-plugin>0.8.10</jacoco-maven-plugin>
+    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+    <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
     <build-helper-maven-plugin.version>3.4.0</build-helper-maven-plugin.version>
     <junit.jupiter.version>5.9.2</junit.jupiter.version>
     <jackson.version>2.14.2</jackson.version>
@@ -115,7 +115,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven-surefire-plugin}</version>
+          <version>${maven-surefire-plugin.versioin}</version>
           <configuration>
             <forkCount>1</forkCount>
           </configuration>
@@ -123,7 +123,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>${jacoco-maven-plugin}</version>
+          <version>${jacoco-maven-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -136,7 +136,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven-compiler-plugin}</version>
+        <version>${maven-compiler-plugin.version}</version>
         <configuration>
           <source>17</source>
           <target>17</target>
