--- a/urban-spork-test/pom.xml
+++ b/urban-spork-test/pom.xml
@@ -46,7 +46,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven-surefire-plugin}</version>
+        <version>${maven-surefire-plugin.versioin}</version>
         <configuration>
           <excludedGroups>dependent</excludedGroups>
         </configuration>
