--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,14 @@
     <finalName>${project.name}</finalName>
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>test</testSourceDirectory>
+    <resources>
+      <resource>
+        <directory>resource</directory>
+        <includes>
+          <include>**/*.xml</include>
+        </includes>
+      </resource>
+    </resources>
     <testResources>
       <testResource>
         <directory>test</directory>
