feat(ss): aead 2022 eih tcp

--- a/urban-spork-test/pom.xml
+++ b/urban-spork-test/pom.xml
@@ -48,7 +48,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.versioin}</version>
         <configuration>
-          <excludedGroups>dependent</excludedGroups>
+          <excludedGroups>integration</excludedGroups>
         </configuration>
       </plugin>
     </plugins>
