fix(gui): fix issues

--- a/urban-spork-client-gui/pom.xml
+++ b/urban-spork-client-gui/pom.xml
@@ -31,6 +31,12 @@
       </resource>
       <resource>
         <directory>resource</directory>
+        <includes>
+          <include>**/*.xml</include>
+        </includes>
+      </resource>
+      <resource>
+        <directory>resource</directory>
         <targetPath>resource</targetPath>
         <excludes>
           <exclude>**/*.xml</exclude>
