--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <jackson.version>2.16.1</jackson.version>
     <logback.version>1.4.14</logback.version>
     <netty.version>4.1.104.Final</netty.version>
-    <bouncycastle.version>1.78</bouncycastle.version>
+    <bouncycastle.version>2.73.6</bouncycastle.version>
     <javafx.version>21.0.1</javafx.version>
     <jfoenix.version>9.0.10</jfoenix.version>
   </properties>
@@ -78,7 +78,7 @@
       </dependency>
       <dependency>
         <groupId>org.bouncycastle</groupId>
-        <artifactId>bcprov-jdk18on</artifactId>
+        <artifactId>bcprov-lts8on</artifactId>
         <version>${bouncycastle.version}</version>
       </dependency>
       <dependency>
