--- a/urban-spork-common/pom.xml
+++ b/urban-spork-common/pom.xml
@@ -14,6 +14,10 @@
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
+      <artifactId>netty-codec-http</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
       <artifactId>netty-handler</artifactId>
     </dependency>
     <dependency>
