--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <jackson.version>2.17.1</jackson.version>
     <logback.version>1.5.6</logback.version>
     <netty.version>4.1.110.Final</netty.version>
-    <bouncycastle.version>2.73.6</bouncycastle.version>
+    <bouncycastle.version>2.73.5</bouncycastle.version>
     <javafx.version>22.0.1</javafx.version>
     <jfoenix.version>9.0.10</jfoenix.version>
   </properties>
@@ -83,6 +83,11 @@
       <dependency>
         <groupId>org.bouncycastle</groupId>
         <artifactId>bcpkix-lts8on</artifactId>
+        <version>${bouncycastle.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcprov-lts8on</artifactId>
         <version>${bouncycastle.version}</version>
       </dependency>
       <dependency>
