--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,6 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
-
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
@@ -26,3 +25,5 @@ jobs:
           files: |
             urban-spork-client-gui/target/*.zip
             urban-spork-server/target/*.zip
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
