--- a/urban-spork-client-gui/pom.xml
+++ b/urban-spork-client-gui/pom.xml
@@ -17,6 +17,36 @@
       <artifactId>javafx-controls</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-base</artifactId>
+      <classifier>linux</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-base</artifactId>
+      <classifier>win</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <classifier>linux</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <classifier>win</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-graphics</artifactId>
+      <classifier>linux</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-graphics</artifactId>
+      <classifier>win</classifier>
+    </dependency>
+    <dependency>
       <groupId>com.jfoenix</groupId>
       <artifactId>jfoenix</artifactId>
     </dependency>
@@ -60,7 +90,8 @@
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
           <descriptors>
-            <descriptor>client-assembly.xml</descriptor>
+            <descriptor>client-win-assembly.xml</descriptor>
+            <descriptor>client-linux-assembly.xml</descriptor>
           </descriptors>
         </configuration>
         <executions>
