--- a/urban-spork-common/pom.xml
+++ b/urban-spork-common/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>urban-spork</groupId>
     <artifactId>urban-spork</artifactId>
-    <version>2.5.5</version>
+    <version>2.5.6</version>
   </parent>
   <artifactId>urban-spork-common</artifactId>
   <dependencies>
@@ -23,6 +23,10 @@
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-handler</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.netty.incubator</groupId>
+      <artifactId>netty-incubator-codec-http3</artifactId>
     </dependency>
     <dependency>
       <groupId>org.bouncycastle</groupId>
