dept: graduate netty HTTP3 from incubator

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
     <jackson.version>2.19.0</jackson.version>
     <logback.version>1.5.18</logback.version>
     <netty.version>4.2.2.Final</netty.version>
-    <netty.http3.version>0.0.29.Final</netty.http3.version>
     <bouncycastle.version>2.73.7</bouncycastle.version>
     <jar-jni.version>1.2.0</jar-jni.version>
     <javafx.version>21.0.7</javafx.version>
@@ -99,27 +98,9 @@
         <version>${netty.version}</version>
       </dependency>
       <dependency>
-        <groupId>io.netty.incubator</groupId>
-        <artifactId>netty-incubator-codec-http3</artifactId>
-        <version>${netty.http3.version}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-buffer</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-codec</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-common</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-transport</artifactId>
-          </exclusion>
-        </exclusions>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-codec-http3</artifactId>
+        <version>${netty.version}</version>
       </dependency>
       <dependency>
         <groupId>org.bouncycastle</groupId>
