--- a/urban-spork-common/pom.xml
+++ b/urban-spork-common/pom.xml
@@ -33,8 +33,8 @@
       <artifactId>netty-codec-http2</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.netty.incubator</groupId>
-      <artifactId>netty-incubator-codec-http3</artifactId>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-codec-http3</artifactId>
     </dependency>
     <dependency>
       <groupId>org.bouncycastle</groupId>
@@ -55,5 +55,12 @@
   </dependencies>
   <build>
     <finalName>${project.artifactId}-${project.version}</finalName>
+    <extensions>
+      <extension>
+        <groupId>kr.motd.maven</groupId>
+        <artifactId>os-maven-plugin</artifactId>
+        <version>1.7.1</version>
+      </extension>
+    </extensions>
   </build>
 </project>
